[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
interoptopus = "0.14"
interoptopus_backend_csharp = "0.14"
libc = "0.2"
